@@ -1,6 +1,9 @@
 # ChangeLog for sci-biology/wise
-# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-biology/wise/ChangeLog,v 1.3 2005/05/21 23:31:50 weeve Exp $
+# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sci-biology/wise/ChangeLog,v 1.4 2006/01/21 18:40:12 ribosome Exp $
+
+  21 Jan 2006; Olivier Fisette <ribosome@gentoo.org> wise-2.2.0.ebuild:
+  Ebuild clean-up.
 
   21 May 2005; Jason Wever <weeve@gentoo.org> wise-2.2.0.ebuild:
   Added ~sparc keyword.
