@@ -1,6 +1,10 @@
 # ChangeLog for sci-biology/trnascan-se
-# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-biology/trnascan-se/ChangeLog,v 1.3 2005/08/12 21:14:38 ribosome Exp $
+# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sci-biology/trnascan-se/ChangeLog,v 1.4 2006/01/21 18:36:49 ribosome Exp $
+
+  21 Jan 2006; Olivier Fisette <ribosome@gentoo.org>
+  trnascan-se-1.23-r1.ebuild:
+  Ebuild clean-up.
 
 *trnascan-se-1.23-r1 (12 Aug 2005)
 
